# decaf-client-python

./: .flake8  .gitignore  .travis.yml  CHANGELOG.md  ChangeLog  ChangeLog.old  LICENSE  MANIFEST.in  Pipfile  README.md  README.rst  flake.nix  pyproject.toml  release-please-config.json  setup.cfg  setup.py  shell.nix  tox.ini
.github/workflows/: install-and-test.yml  release.yaml  test.yml
barista/api/client/: __init__.py  entities.py  machinery.py
decaf/api/client/: __init__.py  _internal.py  entities.py  machinery.py  types.py  utils.py
decaf/api/client/endpoints/: __init__.py  accounts.py  actions.py  actiontypes.py  analyticaltypes.py  artifacts.py  artifacttypes.py  consolidation.py  countries.py  currencies.py  institutions.py  portfolios.py  quants.py  stocks.py  teams.py  users.py
decaf/api/client/repository/: commons.py  types.py  utils.py
decaf/api/client/repository/endpoints/: account.py  action.py  artifact.py  institution.py  quant.py
nix/: sources.json
